--- a/index.html
+++ b/index.html
@@ -6,69 +6,71 @@
     <title>Document</title>
 </head>
 <body>
-    <fieldset>
-    <center><h1><U>SIGNUP FORM</U></h1></center>
-    <form >
-        <label for="Fname">First Name:</label><br>
-        <input type="text" id="Fname" name="Firstname" placeholder="Enter your First name" required><br><br>
-        <label for="Sname">Second Name:</label><br>
-        <input type="text" id="Sname" name="Secondname" placeholder="Enter your Second name" required><br><br>
-        <label for="mail">Gmail:</label><br>
-        <input type="email" id="mail" name="email" placeholder="Enter your gmail" required><br><br>
-        <label for="city">City:</label><br>
-        <input type="text" value="hyderabad" id="city" disabled><br><br>
-        <label for="mobile">Mobile No:</label><br>
-        <input type="tel" id="mobile" name="number" pattern="[0-9]{10}" placeholder="Enter your number" required><br><br>
-        <label for="resume">Select Files:</label><br>
-        <input type="file" id="resume" name="Document" multiple><br><br>
-        <label for="dob">Date Of Birth:</label><br>
-        <input type="date" id="dob" name="dob" required><br><br>
-        <label for="link">Url:</label><br>
-        <input type="url" name="link" id="link" placeholder="Paste your linkedin url" required><br><br>
-        <label for="clr">Select your favourite color:</label><br>
-        <input type="color" id="clr" name="color">
-        <input type="submit"><br><br>
-        <label for="vol">Volume between 0 to 100:</label><br>
-        <input type="range" id="vol" name="vol"><br><br>
-        <input type="submit"><br>
-        <p>Please select your age:</p>
-        <input type="radio" value="20" id="age1" name="age">
-        <label for="age1">0-20</label><br>
-        <input type="radio" value="40" id="age2" name="age">
-        <label for="age2">21-40</label><br>
-        <input type="radio" value="60" id="age3" name="age">
-        <label for="age3">41-60</label><br><br>
-        <label for="skills">Please select your language</label><br>
-        <select name="skills" id="select">
-            <option value="html">HTML</option>
-            <option value="css">CSS</option>
-            <option value="javascript">JAVASCRIPT</option>
-            <option value="react">REACT</option>
-            <option value="python">PYTHON</option>
-            <option value="java">JAVA</option>
-        </select><br><br>
-        <label for="pswd">Password:</label><br>
-        <input type="password" id="pswd" name="password" placeholder="Enter your password" required><br><br>
-        <p>Recheck the above details:</p>
-        <input type="checkbox" id="check" name="check">
-        <label for="check">Firsname</label><br>
-        <input type="checkbox" id="check" name="check">
-        <label for="check">Secondname</label><br>
-        <input type="checkbox" id="check" name="check">
-        <label for="check">Gmail</label><br>
-        <input type="checkbox" id="check" name="check">
-        <label for="check">Mobile No</label><br>
-        <input type="checkbox" id="check" name="check">
-        <label for="check">Date of birth</label><br>
-        <input type="checkbox" id="check" name="check">
-        <label for="check">Url</label><br>
-        <input type="checkbox" id="check" name="check">
-        <label for="check">Age</label><br>
-        <input type="checkbox" id="check" name="check">
-        <label for="check">Password</label><br><br>
-        <button>RESET</button>
-        <button>SUBMIT</button>
-    </form>
-    </fieldset>
+    <center>
+        <img src="./360_F_300389025_b5hgHpjDprTySl8loTqJRMipySb1rO0I.jpg" width="200" 
+        height="100">
+    </center>
+        
+            <iframe width="300" height="200"
+                src="https://www.youtube.com/embed/lV1OOlGwExM?si=qhU77DFa96wFIbWH" 
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="300" height="200" 
+                src="https://www.youtube.com/embed/basLDO2bj2k?si=DjXzy5uf0buJyBLw"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                picture-in-picture; web-share" allowfullscreen></iframe>
+           <iframe width="300" height="200"
+                src="https://www.youtube.com/embed/Yf2-DV_8bVg?si=6U6OZqkTq0bjZ5up" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+                picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="300" height="200" 
+                src="https://www.youtube.com/embed/en7JftQ666c?si=tfyATWMm5ltVtaqM" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+    <center>
+            <img src="./Google_Maps-Logo.wine.png" width="200" height="100">
+    </center>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3549.400402283398!2d78.03956727581327!3d27.17514954876267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1702393338436!5m2!1sen!2sin" 
+            width="300" height="200" style="border:0;" 
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1904.0288523407528!2d78.47174783873693!3d17.360956105900346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb978a6e1a939b%3A0xcb5a69e4aaf113fb!2sCharminar!5e0!3m2!1sen!2sin!4v1702393533517!5m2!1sen!2sin" 
+            width="300" height="200" style="border:0;" 
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.04088817705!2d78.46727127560254!3d17.40982530215747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb97e06b770357%3A0x9f4f580aa1aa4691!2zU2VjcmV0YXJpYXQgVGVsYW5nYW5hICjgsLjgsYbgsJXgsY3gsLDgsJ_gsYfgsLDgsL_gsK_gsJ_gsY0g4LCk4LGG4LCy4LCC4LCX4LC-4LCjKQ!5e0!3m2!1sen!2sin!4v1702394334662!5m2!1sen!2sin" 
+            width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30338.704573217678!2d78.82863139565185!3d18.102172748030686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcc92b2b5edb805%3A0x498ecfa22f1e8ce4!2sSiddipet%2C%20Telangana!5e0!3m2!1sen!2sin!4v1702394526314!5m2!1sen!2sin" 
+            width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h3><center>Video Tag</center></h3>
+    <video width="300" height="200" controls>
+        <source src="./pexels-mehmet-kılınç-18990799 (2160p).mp4">
+    </video>
+    <video width="300" height="200" controls>
+        <source src="./pexels-ben-blight-19305996 (2160p).mp4">
+    </video>
+    <video width="300" height="200" controls>
+        <source src="./movie.mp4">
+    </video>
+    <video width="300" height="200" controls>
+        <source src="./pexels-visual-soundscapes-19264911 (Original).mp4">
+    </video>
+    <h3><center>Audio Tag</center></h3>
+    <audio width="300" height="200" controls>
+        <source src="./Pehle Bhi Main(PagalWorld.com.pe).mp3" >
+    </audio>
+    <audio width="300" height="200" controls >
+        <source src="./Arjan Vailly(PagalWorld.com.pe).mp3" >
+    </audio>
+    <audio width="300" height="200" controls>
+        <source src="./Abrars Entry - Jamal Kudu(PagalWorld.com.pe).mp3">
+    </audio>
+    <audio width="300" height="200" controls>
+        <source src="./Saari Duniya Jalaa Denge(PagalWorld.com.pe).mp3" >
+    </audio>
 </body>
 </html>
