--- a/index.html
+++ b/index.html
@@ -5,64 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table,tr,td,th {
+        table,th,tr,td {
             border: 1px solid black;
             border-collapse: collapse;
         }
-        
     </style>
 </head>
 <body>
-    <h1><marquee>Pro Kabaddi league 2023</marquee></h1>
-<table>  
+   <table>
     <tr>
-        <th>MATCHES</th>
-        <th>DATES</th>
+        <th colspan="3">KABADDI LEAGUE 2023</th>
+    </tr>
+    <tr>
+        <th>TEAM 1</th>
+        <th>TEAM 2</th>
         <th>TIMINGS</th>
         <th>VENUE</th>
     </tr>
     <tr>
-        <td>puneri paltan vs bengal warriors</td>
-        <td rowspan="2">Dec 16th</td>
-        <td>8:00PM</td>
-        <td rowspan="10">Badminton Hall in Balewadi Sports Complex,Pune</td>
+        <td colspan="2"><center>Puneri Paltan VS Bengal Warriors</center></td>
+        <td rowspan="2"><center>Dec 16th</center></td>
+        <td rowspan="4"><center>Pune</center></td>
     </tr>
     <tr>
-        <td>Telugu Titans vs Dabang Delhi</td>
-        <td>9:00PM</td>
+        <td colspan="2"><center>Telugu Titans VS Dabang</center></td>
     </tr>
     <tr>
-        <td>Patna Pirates VS Jaipur Pink Panthers</td>
-        <td rowspan="2">Dec 17th</td>
-        <td>8:00PM</td>
+        <td colspan="2"><center>Patna Pirates VS jaipur Pink Panthers</center></td>
+        <td rowspan="2"><center>Dec 17th</center></td>
     </tr>
-    <tr>
-        <td>U Mumba VS Tamil Thalaivas</td>
-        <td>9:00PM</td>
+    <tr> 
+        <td colspan="2"><center>U Mumba VS Tamil Thlaivas</center></td>
     </tr>
-    <tr>
-        <td>Bengal Warriors VS UP Yoddhas</td>
-        <td rowspan="2">Dec 18th</td>
-        <td>8:00PM</td>
-    </tr>
-    <tr>
-        <td>Puneri Paltan VS Dabang Delhi</td>
-        <td>9:00PM</td>
-    </tr>
-    <tr>
-        <td>Haryana steelers Vs Gujarat Gaints</td>
-        <td>Dec 19th</td>
-        <td>8:00PM</td>
-    </tr>
-    <tr>
-        <td>Jaipur Pink Panthers VS UP Yoddhas</td>
-        <td rowspan="2">Dec 20th</td>
-        <td>8:00PM</td>
-    </tr>
-    <tr>
-        <td>Puneri Paltan VS Bengyluru Bulls</td>
-        <td>9:00PM</td>
-    </tr>
-</table>   
-</body> 
+   </table> 
+</body>
 </html>
